# Crackedd

./: ARCHITECTURE.md  PROJECT_STRUCTURE.md  README.md  SYSTEM_DESIGN.md  tailwind.config.js
backend/: pyproject.toml
backend/app/: server.py
backend/app/api/: deps.py
backend/app/api/routes/: slack.py
backend/app/langgraph/: agent.py
backend/app/models/: slack.py
backend/app/services/: ai_processor.py  slack_integration.py
frontend/: .eslintrc.json  .lintstagedrc.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/chat/actions/: route.ts
frontend/components/: MyAssistant.tsx  ThemeSwitch.tsx
frontend/components/integrations/: ConnectWorkspaceForm.tsx  IntegrationsDashboard.tsx  ProcessingResults.tsx  SlackIntegration.tsx  SlackIntegrationModal.tsx  WorkspacesList.tsx
frontend/components/sidebar/: IntegrationsSidebar.tsx
frontend/components/tools/slack/: SlackConnectTool.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx
frontend/lib/: utils.ts
frontend/lib/api/: axios.ts  slack.ts
frontend/theme/: index.ts  theme-config.ts  theme-provider.tsx  theme-toggle.tsx
